--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,24 @@
   /* color-scheme: light dark; */
 
   /* 📋 change to var */
-  color: #18000a;
-  background-color: #e1dfdd;
+  --main-font-color--diesel: #18000a;
+  --main-bg-color--westar: #e1dfdd;
+  /* color: #18000a; */
+  background-color: var(--main-bg-color--westar);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* Global list stylings */
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 0.4rem;
 }
 
 /* Montserrat import */
@@ -21,7 +32,7 @@
   src: url("/public/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -29,17 +40,15 @@ a {
 a:hover {
   color: #535bf2;
 }
+  */
 
 body {
+  color: var(--main-font-color--diesel);
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
 }
 
 /* 📋 add media query for responsiveness */
